CloudAlpacas/salesforce/main/default/objects/SDO_GenAI_Feedback_Detail__c/SDO_GenAI_Feedback_Detail__c.object-meta.xml
<CustomObject>
    <description>Demo shadow object for the Einstein GenAIFeedbackDetail telemetry stream. Schema mirrors GenAIFeedbackDetail__dlm for passthrough DLO-to-DMO mapping. Holds line-item detail (free-text comments, structured tags) beneath a SDO_GenAI_Feedback__c row.</description>
    <label>SDO GenAI Feedback Detail</label>
    <nameField>
        <displayFormat>SDOFD-{00000}</displayFormat>
        <label>Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO GenAI Feedback Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>