CloudAlpacas/salesforce/main/default/objects/SDO_GenAI_Feedback_Detail__c/fields/appFeedback__c.field-meta.xml
<CustomField>
    <fullName>appFeedback__c</fullName>
    <description>Structured feedback payload (e.g. JSON of tags, rating buckets). Long Text Area on the CRM side so demo payloads can include realistic structured content; ingested as text to the DMO.</description>
    <label>App Feedback</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>