CloudAlpacas/salesforce/main/default/objects/SDO_GenAI_Feedback_Detail__c/fields/cloud__c.field-meta.xml
<CustomField>
    <fullName>cloud__c</fullName>
    <description>Cloud denormalized from the parent feedback row. Passthrough to GenAIFeedbackDetail__dlm.cloud__c.</description>
    <label>Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Industries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>