CloudAlpacas/salesforce/main/default/objects/SDO_GenAI_Feedback_Detail__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Load-time idempotency key. Not mapped to the DMO. Use the same value as feedbackDetailId__c by convention.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>