CloudAlpacas/salesforce/main/default/objects/SDO_GenAI_Feedback_Detail__c/fields/feedbackDetailId__c.field-meta.xml
<CustomField>
    <fullName>feedbackDetailId__c</fullName>
    <description>DMO primary key. camelCase preserved for DLO-to-DMO passthrough. Maps to GenAIFeedbackDetail4.Feedback_Detail_Id.</description>
    <externalId>true</externalId>
    <label>Feedback Detail Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>