CloudAlpacas/salesforce/main/default/objects/SDO_GenAI_Feedback_Detail__c/fields/feedbackText__c.field-meta.xml
<CustomField>
    <fullName>feedbackText__c</fullName>
    <description>Free-text comment a user left with the feedback. Passthrough to GenAIFeedbackDetail__dlm.feedbackText__c.</description>
    <label>Feedback Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>